[tool.poetry]
name = "nonebot-plugin-mai-online-lineup"
version = "1.0.1"
description = "Nonebot 舞萌线上排卡插件"
authors = ["shengwang52005 <shengwang52005@163.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nonebot2 = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
